# fb-scraper

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.cursor/rules/: uv-run-fb-sc.mdc
fb_scraper/: cli.py  config.py  scraper.py
